src/components/Form/Form.module.css
    .form {
        @apply w-70 m-auto desktop:w-81 ;
    }
    .input {
        @apply w-full mb-3 pl-8 h-11 border border-main rounded-full shadow-inner outline-none text-main;
    }
    .label {
        @apply absolute left-8 top-3 text-sm text-main desktop:text-likeGrey hover:text-main transition-transform;
    }
    .phonebutton {
        @apply !pl-6 !rounded-l-full !border-hidden !bg-transparent;
    }

    .phoneinput {
        @apply !pl-[72px] !h-11 text-main !border-buttonMobile desktop:!border-hidden !w-full !rounded-full shadow-inner;
    }
    .phonedropdown {
        @apply left-0 top-0 !m-0 !pl-8 !w-70 desktop:!w-81 text-left !rounded-2xl snap-start;
    }
        .phonedropdown::-webkit-scrollbar {
            @apply w-4 bg-[#e4eaeb];
        }
        .phonedropdown::-webkit-scrollbar-thumb {
            @apply h-2 rounded bg-likeGrey;
        }

.error {
    @apply absolute -top-1 right-8 z-10 text-error text-[8px];
}
.modalsuccess{
    @apply w-[456px] h-[225px] pt-14 px-[68px] bg-white
}
.modaltitle {
    @apply mb-1 text-2xl font-semibold text-main;
}
.modaltext {
    @apply font-medium text-xl text-black;
}

.input:focus + .label,
.input:not(:placeholder-shown) + .label {
    font-size: 8px;
    color: #00A5CC;
    transform: translateY(-20px);
}
.checkbox {
    position: absolute;
    appearance: none;
}

.checkbox:checked + .check {
    background-image: url('../../images/check.svg');
}

.checkbox:invalid +.check {
    background-image: url('../../images/errorcheck.svg');
}

.check {
    width: 16px;
    height: 16px;
    background-image: url('../../images/notcheck.svg');
}

